test/files/neg/bug1392.scala
object X extends Application { Int }