test/files/neg/bug1392.check
bug1392.scala:1: error: object Int is not a value
object X extends Application { Int }
                               ^
one error found
